--- a/kartwheel/app/src/main/res/drawable/game_info_player_background.xml
+++ b/kartwheel/app/src/main/res/drawable/game_info_player_background.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="6dp" />
-    <solid android:color="@color/grey_button_disabled" />
+    <solid android:color="@color/game_info_player_background" />
     <stroke
         android:width="2dp"
-        android:color="@android:color/black" />
+        android:color="@color/light_grey" />
 </shape>
