--- a/kartwheel/app/src/main/res/layout/item_view.xml
+++ b/kartwheel/app/src/main/res/layout/item_view.xml
@@ -16,6 +16,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginBottom="8dp"
         android:layout_toRightOf="@+id/image"
+        android:textSize="16dp"
         android:textStyle="bold"
         tools:text="@string/acorn" />
 
@@ -25,5 +26,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/title"
         android:layout_toRightOf="@+id/image"
+        android:textSize="16dp"
         tools:text="@string/event_acorn" />
 </merge>
