--- a/kartwheel/app/src/main/res/values/styles.xml
+++ b/kartwheel/app/src/main/res/values/styles.xml
@@ -28,10 +28,10 @@
 
     <style name="GameInfoTitleStyle">
         <item name="android:padding">16dp</item>
-        <item name="android:textColor">@color/blue</item>
+        <item name="android:textColor">@android:color/black</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">30sp</item>
+        <item name="android:textSize">34sp</item>
         <item name="android:layout_gravity">left</item>
         <item name="android:maxLines">1</item>
         <item name="android:singleLine">true</item>
