--- a/kartwheel/app/src/main/res/layout/activity_onboarding.xml
+++ b/kartwheel/app/src/main/res/layout/activity_onboarding.xml
@@ -61,9 +61,15 @@
 
             <us.handstand.kartwheel.layout.RegistrantAvatarView
                 android:id="@+id/image"
-                android:layout_width="175dp"
-                android:layout_height="175dp"
-                android:layout_gravity="center_horizontal" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/onboarding_camera"
+                android:background="@drawable/background_white_circle"
+                android:maxHeight="200dp"
+                android:maxWidth="200dp"
+                android:minHeight="175dp"
+                android:minWidth="175dp" />
 
             <TextView
                 android:id="@+id/imageText"
