--- a/kartwheel/app/src/main/res/layout/activity_onboarding.xml
+++ b/kartwheel/app/src/main/res/layout/activity_onboarding.xml
@@ -59,7 +59,7 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <us.handstand.kartwheel.layout.RegistrantAvatarView
+            <us.handstand.kartwheel.layout.CircularImageView
                 android:id="@+id/image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
