--- a/kartwheel/app/src/main/res/layout/view_top_course_time.xml
+++ b/kartwheel/app/src/main/res/layout/view_top_course_time.xml
@@ -16,7 +16,7 @@
         android:textSize="16dp"
         tools:text="1st" />
 
-    <us.handstand.kartwheel.layout.RegistrantAvatarView
+    <us.handstand.kartwheel.layout.CircularImageView
         android:id="@+id/avatar"
         android:layout_width="44dp"
         android:layout_height="44dp"
