--- a/kartwheel/app/src/main/res/layout/activity_onboarding.xml
+++ b/kartwheel/app/src/main/res/layout/activity_onboarding.xml
@@ -2,6 +2,7 @@
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/coordinatorLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -94,7 +95,16 @@
         app:behavior_skipCollapsed="true"
         app:layoutManager="GridLayoutManager"
         app:layout_behavior="BottomSheetBehavior"
-        app:spanCount="4"
+        app:spanCount="3"
         tools:listitem="@layout/recycler_view_item_emoji"
         tools:visibility="visible" />
+
+    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
+        android:id="@+id/video"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:behavior_hideable="true"
+        app:behavior_peekHeight="0dp"
+        app:behavior_skipCollapsed="true"
+        app:layout_behavior="BottomSheetBehavior" />
 </android.support.design.widget.CoordinatorLayout>
