--- a/kartwheel/app/src/main/res/layout/recycler_view_item_emoji.xml
+++ b/kartwheel/app/src/main/res/layout/recycler_view_item_emoji.xml
@@ -2,11 +2,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:layout_weight="1">
 
-    <us.handstand.kartwheel.layout.CircularImageView
+    <us.handstand.kartwheel.layout.SimpleGlideImageView
         android:id="@+id/emoji"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_gravity="center_horizontal" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
 </FrameLayout>
