--- a/kartwheel/app/src/main/res/layout/fragment_game_info.xml
+++ b/kartwheel/app/src/main/res/layout/fragment_game_info.xml
@@ -44,7 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             app:description="@string/event_banana"
-            app:src="@mipmap/item_banana"
+            app:src="@drawable/item_banana"
             app:title="@string/banana" />
 
         <us.handstand.kartwheel.layout.ItemView
@@ -52,14 +52,14 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             app:description="@string/event_acorn"
-            app:src="@mipmap/red_turtle"
+            app:src="@drawable/item_shell_red"
             app:title="@string/acorn" />
 
         <us.handstand.kartwheel.layout.ItemView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:description="@string/event_earthquake"
-            app:src="@mipmap/item_earthquake"
+            app:src="@drawable/item_earthquake"
             app:title="@string/earthquake" />
 
     </LinearLayout>
