--- a/kartwheel/app/src/main/res/layout/game_info_player_view.xml
+++ b/kartwheel/app/src/main/res/layout/game_info_player_view.xml
@@ -30,5 +30,5 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerInParent="true"
-        android:src="@mipmap/gameinfo_red_x" />
+        android:src="@drawable/gameinfo_red_x" />
 </merge>
